--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<header>
 					<h2>We live in a wonderland</h2>
 				</header>
-				<p>There are many environmential sceneries we can enjoy for <a href="http://n33.co">AJ</a> ,such as <a href="http://html5up.net">forest ,ocean and landscape...</a>.<br />
+				<p>There are many environmential sceneries we can enjoy for <a href="http://n33.co"></a> ,such as <a href="http://html5up.net">forest ,ocean and landscape...</a>.<br />
 				Giving us comfortable feelings, <strong>we</strong> live under<br />
 				 the nature <a href="http://html5up.net/license">happily.</a>.</p>
 				<footer>
