--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 					<p><b>By Photosynthesis</b></p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Start Journey</a>
+					<p><a href="#banner" class="button style2 scrolly-middle">Start Journey</a><br /></p>
+					<a href="Flying sheep Journey/index.html" class="button style2 scrolly-middle">Game</a>
+
 				</footer>
 			</section>
 
