--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				</header>
 				<footer>
 					<p><a href="#banner" class="button style2 scrolly-middle">Start Journey</a><br /></p>
-					<a href="Flying sheep Journey/index.html" class="button style2 scrolly-middle">Game</a>
+					<a href="Jumping Game/index.html" class="button style2 scrolly-middle">Game
+					</a>
 
 				</footer>
 			</section>
