--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<p><b>By Photosynthesis</b></p>
 				</header>
 				<footer>
-					<p><a href="#banner" class="button style2 scrolly-middle">Start Journey</a><br /></p>
+					<p><a href="#banner" class="button style2 scrolly-middle">Start Journey</a></br></p>
 					<a href="Jumping Game/index.html" class="button style2 scrolly-middle">Game
 					</a>
 
