--- a/index.html
+++ b/index.html
@@ -92,23 +92,12 @@
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
-					<h2>Reflection</h2>
-					<p>Say whatever you want to!</p>
+					<h2>Let's watch a video!</h2>
+					<p>broaden your horizon</p>
 				</header>
-				<form method="post" action="#">
-					<div class="row 50%">
-						<div class="6u 12u$(mobile)"><input type="text" class="text" name="name" placeholder="Name" /></div>
-						<div class="6u$ 12u$(mobile)"><input type="text" class="text" name="email" placeholder="Email" /></div>
-						<div class="12u$">
-							<textarea name="message" placeholder="Message"></textarea>
-						</div>
-						<div class="12u$">
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</div>
-					</div>
-				</form>
+				<div align="center">
+				<iframe width="853" height="480" src="https://www.youtube.com/embed/j6xasB5TOVM" frameborder="0" allowfullscreen></iframe>
+				</div>
 			</article>
 
 		<!-- Generic -->
