--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<h2>Let's watch a video!</h2>
 					<p>broaden your horizon</p>
 				</header>
-				<div align="center">
+				<div class="iframe" >
 				<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/GELKWLdCTv8" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</article>
@@ -260,7 +260,7 @@
 
 		<section id="footer">
 			<ul class="icons">
-				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon fa-arrow-circle-right"><span class="label">WHO</span></a></li>
 				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 				<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
